# github-contrib-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  build.spec  build_exe.bat  install.bat  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_agent.bat  uninstall.bat
.github/workflows/: ci.yml  release.yml
agent/: __init__.py  config.py  constants.py  core.py  optimized.py
config/: config.example.json
data/: contribution_history.json
tests/: test_config.py  test_core.py  test_tray.py
tray/: __init__.py  app.py  onboarding.py  settings_window.py
